--- a/dataset/Makefile
+++ b/dataset/Makefile
@@ -1,11 +1,11 @@
-all: videos/GOPR0809_start_0_27_end_1_55.mp4 original_videos/GOPR809.MP4
+all: videos/GOPR0809_start_0_27_end_1_55.mp4 original_videos/GOPR0809.MP4
 
 videos/GOPR0809_start_0_27_end_1_55.mp4: videos.tar.gz
     mkdir videos
     tar -zxvf videos.tar.gz -C videos
     touch videos/GOPR0809_start_0_27_end_1_55.mp4
 
-original_videos/GOPR0809.mp4: original_videos.tar.gz
+original_videos/GOPR0809.MP4: original_videos.tar.gz
     mkdir original_videos
     tar -zxvf original_videos.tar.gz -C original_videos
     touch original_videos/GOPR0809.MP4
